// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
Array [
  <span
    className="sc-bVhkf dPfTWV"
  >
    Xsmall
  </span>,
  <span
    className="sc-bVhkf gDZLgS"
    color="goten.100"
  >
    Xsmall
  </span>,
  <span
    className="sc-bVhkf cKUxhS"
    color="goten.100"
  >
    Xsmall
  </span>,
]
`;

exports[`Label renders with different Icons 1`] = `
Array [
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-bVhkf htsRcu"
      size="twoxsmall"
    >
      <span
        className="sc-fdCYqt hLoUOb"
        size="twoxsmall"
      >
        <svg
          className="sc-iqPaeV"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </span>
    <span
      className="sc-bVhkf jHxzHi"
      size="twoxsmall"
    >
      Twoxsmall
      <span
        className="sc-cmnYtw lmvjEb"
        size="twoxsmall"
      >
        <svg
          className="sc-gScZFl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-bVhkf eFwDgw"
      size="twoxsmall"
    >
      <span
        className="sc-fdCYqt hLoUOb"
        size="twoxsmall"
      >
        <svg
          className="sc-iqPaeV"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="sc-cmnYtw lmvjEb"
        size="twoxsmall"
      >
        <svg
          className="sc-gScZFl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <span
      className="sc-bVhkf KKEFb"
    >
      <span
        className="sc-fdCYqt fDbyIK"
      >
        <svg
          className="sc-iqPaeV"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </span>
    <span
      className="sc-bVhkf SJMNH"
    >
      Xsmall
      <span
        className="sc-cmnYtw hIEbba"
      >
        <svg
          className="sc-gScZFl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
    <span
      className="sc-bVhkf feYzfR"
    >
      <span
        className="sc-fdCYqt fDbyIK"
      >
        <svg
          className="sc-iqPaeV"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="sc-cmnYtw hIEbba"
      >
        <svg
          className="sc-gScZFl"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </span>
  </div>,
]
`;

exports[`Label renders with different LetterCases 1`] = `
Array [
  <span
    className="sc-bVhkf dPfTWV"
  >
    Default
  </span>,
  <span
    className="sc-bVhkf VyqS"
  >
    Lowercase
  </span>,
]
`;

exports[`Label renders with different Sizes 1`] = `
Array [
  <span
    className="sc-bVhkf eHXszk"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-bVhkf dPfTWV"
  >
    Xsmall
  </span>,
  <span
    className="sc-bVhkf kOLVtt"
    size="twoxsmall"
  >
    Twoxsmall
  </span>,
  <span
    className="sc-bVhkf VyqS"
  >
    Xsmall
  </span>,
]
`;
